logic for character services and stats services created and created unit tests

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,14 @@ Thumbs.db
 .vscode/
 *.swp
 
+# Jest coverage
+coverage/
+
 # Knex
 migrations/*.js
 seeds/*.js
+
+# Node package locks
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
