--- a/package.json
+++ b/package.json
@@ -2,17 +2,14 @@
     "name": "characters-api",
     "version": "0.1.0",
     "private": true,
-    "type": "module",
+    "type": "commonjs",
     "scripts": {
         "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
         "build": "tsc -p tsconfig.json",
         "start": "node dist/server.js",
         "setup:env": "cp .env.example .env || echo 'Windows: copy .env.example .env'",
-        "test": "jest --coverage",
-        "migrate:make": "knex --knexfile knexfile.ts migrate:make",
-        "migrate:latest": "knex --knexfile knexfile.ts migrate:latest",
-        "migrate:rollback": "knex --knexfile knexfile.ts migrate:rollback",
-        "seed": "knex --knexfile knexfile.ts seed:run",
+        "test": "jest",
+        "test:coverage": "jest --coverage",
         "lint": "eslint ."
     },
     "dependencies": {
